photo_album_app_on_OCS_OBC.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: photo-album
  name: photo-album
spec:
  replicas: 1
  selector:
    matchLabels:
      app: photo-album
      deploymentconfig: photo-album
  strategy:
    resources: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: photo-album
        deploymentconfig: photo-album
    spec:
      containers:
      - image: photo-album:latest
        name: photo-album
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop:
            - ALL
...
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: photo-album
  name: photo-album
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: photo-album
    deploymentconfig: photo-album
...
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: photo-album
  name: photo-album
spec:
  to:
    kind: Service
    name: photo-album
    weight: 100
  port:
    targetPort: web
  wildcardPolicy: None
  tls:
    termination: Edge
    insecureEdgeTerminationPolicy: Redirect # Redirects HTTP traffic to HTTPS
...
